--- a/haxball_site/templates/core/post/list.html
+++ b/haxball_site/templates/core/post/list.html
@@ -15,7 +15,7 @@
     <div class="card-body">
         <h3 class="text-center mt-1 mb-0"><i class="fa fa-exclamation text-danger" aria-hidden="true"></i>
 
-            Важная информация <i class="fa fa-exclamation text-danger" aria-hidden="true"></i>
+            Актуальные новости <i class="fa fa-exclamation text-danger" aria-hidden="true"></i>
         </h3>
         <hr>
         {% for post in posts %}
