--- a/haxball_site/templates/tournament/match/detail.html
+++ b/haxball_site/templates/tournament/match/detail.html
@@ -148,20 +148,45 @@
                         <div class="row">
                             <div class="col-5">
                                 {% if match.team_home == goal.team and goal.event != 'OG' %}
-                                    <h6>
-                                        <img src="{% static "img/ico/ball_2.png" %}" height="16" width="16"
-                                             title="Гол" class="mr-1">{{ goal.author }}{% if goal.assistent %}
-                                        ({{ goal.assistent }})
+
+
+                                    {% if goal.event == 'CLN' %}
+                                        <h6><img src="{% static "img/ico/clean_sheet1.png" %}" height="20" width="20"
+                                                 title="Сухой тайм"> {{ goal.author }}</h6>
+                                    {% elif goal.event == 'YEL' %}
+                                        <h6><img src="{% static "img/ico/yellow_card.png" %}" height="20" width="20"
+                                                 title="Жёлтая"> {{ goal.author }}</h6>
+                                    {% elif goal.event == 'RED' %}
+                                        <h6><img src="{% static "img/ico/red_card.png" %}" height="20" width="20"
+                                                 title="Красная"> {{ goal.author }}</h6>
+                                    {% elif goal.player_out %}
+                                        <h6>
+                                            <i class="fa fa-arrow-up text-success" aria-hidden="true"
+                                               style="font-size: 16px"></i>
+                                            <span class="mr-1">{{ goal.player_in }}</span>
+                                            <i class="fa fa-arrow-down text-danger" aria-hidden="true"
+                                               style="font-size: 16px"></i>
+                                            {{ goal.player_out }}
+
+                                        </h6>
+                                    {% else %}
+                                        <h6>
+                                            <img src="{% static "img/ico/ball_2.png" %}" height="16" width="16"
+                                                 title="Гол" class="mr-1">
+                                            {{ goal.author }}
+                                            {% if goal.assistent %}
+                                                <img src="{% static "img/ico/boot_ass_2.png" %}" class="ml-1"
+                                                     height="20" width="20"
+                                                     title="Голевые передачи">
+                                                {{ goal.assistent }}{% endif %}
+                                        </h6>
                                     {% endif %}
-                                    </h6>
-                                {% endif %}
-                                {% if goal.event == 'OG' and match.team_guest == goal.team %}
-                                    <h6><img src="{% static "img/ico/ball_2_og.png" %}" height="16" width="16"
-                                             title="Гол" class="mr-1"> {{ goal.author }}</h6>
+
                                 {% endif %}
 
-                                {% if goal.event == 'CLN' and match.team_home == goal.team %}
-                                    <h6>(ПЕРЧАТКА!) {{ goal.author }}</h6>
+                                {% if goal.event == 'OG' and match.team_guest == goal.team %}
+                                    <h6><img src="{% static "img/ico/ball_2_og.png" %}" height="16" width="16"
+                                             title="Автогол" class="mr-1"> {{ goal.author }}</h6>
                                 {% endif %}
 
                             </div>
@@ -169,23 +194,49 @@
                                 <h6>{{ goal.time_min|add:1 }}'</h6>
                             </div>
                             <div class="col-5">
-                                {% if match.team_guest == goal.team and goal.event != 'OG' and goal.event != 'CLN' %}
-                                    <h6>
-                                        <img src="{% static "img/ico/ball_2.png" %}" height="16" width="16"
-                                             title="Гол" class="mr-1">{{ goal.author }}{% if goal.assistent %}
-                                        ({{ goal.assistent }})
+                                {% if match.team_guest == goal.team and goal.event != 'OG' %}
+
+                                    {% if goal.event == 'CLN' %}
+                                        <h6><img src="{% static "img/ico/clean_sheet1.png" %}" height="20" width="20"
+                                                 title="Сухой тайм"> {{ goal.author }}</h6>
+                                    {% elif goal.event == 'YEL' %}
+                                        <h6><img src="{% static "img/ico/yellow_card.png" %}" height="20" width="20"
+                                                 title="Жёлтая"> {{ goal.author }}</h6>
+                                    {% elif goal.event == 'RED' %}
+                                        <h6><img src="{% static "img/ico/red_card.png" %}" height="20" width="20"
+                                                 title="Красная"> {{ goal.author }}</h6>
+                                    {% elif goal.player_out %}
+                                        <h6>
+                                            <i class="fa fa-arrow-up text-success" title="Игрок вышел"
+                                               aria-hidden="true"
+                                               style="font-size: 16px"></i>
+                                            <span class="mr-1">{{ goal.player_in }}</span>
+                                            <i class="fa fa-arrow-down text-danger" title="Игрок ушёл"
+                                               aria-hidden="true"
+                                               style="font-size: 16px"></i>
+                                            {{ goal.player_out }}
+
+                                        </h6>
+                                    {% else %}
+                                        <h6>
+                                            <img src="{% static "img/ico/ball_2.png" %}" height="16" width="16"
+                                                 title="Гол" class="mr-1">
+                                            {{ goal.author }}
+                                            {% if goal.assistent %}
+                                                <img src="{% static "img/ico/boot_ass_2.png" %}" class="ml-1"
+                                                     height="20" width="20"
+                                                     title="Голевые передачи">
+                                                {{ goal.assistent }}{% endif %}
+                                        </h6>
                                     {% endif %}
-                                    </h6>
-                                {% endif %}
-                                {% if goal.event == 'OG' and match.team_home == goal.team %}
-                                    <h6><img src="{% static "img/ico/ball_2_og.png" %}" height="16" width="16"
-                                             title="Гол" class="mr-1"> {{ goal.author }}</h6>
+
                                 {% endif %}
 
-                                {% if goal.event == 'CLN' and match.team_guest == goal.team %}
-                                    <h6><img src="{% static "img/ico/clean_sheet1.png" %}" height="20" width="20"
-                                             title="Сухие матчи"> {{ goal.author }}</h6>
+                                {% if goal.event == 'OG' and match.team_home == goal.team %}
+                                    <h6><img src="{% static "img/ico/ball_2_og.png" %}" height="16" width="16"
+                                             title="Автогол" class="mr-1"> {{ goal.author }}</h6>
                                 {% endif %}
+
                             </div>
                         </div>
                     {% endfor %}
