--- a/haxball_site/templates/core/profile/profile_detail.html
+++ b/haxball_site/templates/core/profile/profile_detail.html
@@ -33,17 +33,17 @@
                 <div class="card-block text-center text-white">
                     <div class="m-b-10"><img src="{{ profile.avatar.url }}" width="100%" height="100%"
                                              class="img-radius" alt="User-Profile-Image"></div>
-                    <h4 class="f-w-600">{{ profile.name }}
+                    <h3 class="f-w-600">{{ profile.name }}
                         {% for icon in profile.user_icon.all %}
-                            <img src="{{ icon.image.url }}" width="16px" height="16px" title="{{ icon.description }}">
+                            <img src="{{ icon.image.url }}" width="25px" height="25px" title="{{ icon.description }}" class="mb-1">
                         {% endfor %}
-                    </h4>
+                    </h3>
                     {% if profile.name.user_player.team %}
                         <p class="mb-1">
-                            <a href="{{ profile.name.user_player.team.get_absolute_url }}" class="text-secondary">
+                            <a href="{{ profile.name.user_player.team.get_absolute_url }}" class="text-white">
                                 <img src="{{ profile.name.user_player.team.logo.url }}"
-                                     alt="{{ profile.name.user_player.team.title }}" style="width: 20px; height: 20px;">
-                                <span style="font-weight: bold; font-size: 14px;">{{ profile.name.user_player.team.title }}</span>
+                                     alt="{{ profile.name.user_player.team.title }}" class="mb-1" style="width: 28px; height: 28px;">
+                                <span style="font-weight: bold; font-size: 17px;">{{ profile.name.user_player.team.title }}</span>
                             </a>
                         </p>
                     {% else %}
