--- a/haxball_site/templates/tournament/premier_league/team_table.html
+++ b/haxball_site/templates/tournament/premier_league/team_table.html
@@ -188,16 +188,21 @@
                         <div class="row">
 
                             <div class="col-12">
-                                <p>
-                                    <button class="btn btn-primary" type="button" data-toggle="collapse"
+                                <p class="mb-0">
+                                    <button class="btn btn-secondary mt-2 {% if forloop.last %}mb-3{% elif forloop.first %}mt-3{% endif %}"
+                                            type="button" data-toggle="collapse"
                                             data-target="#tour{{ tour }}" aria-expanded="false"
-                                            aria-controls="tour{{ tour }}">
-                                        Тур {{ tour }}
+                                            aria-controls="tour{{ tour }}" style="width: 90%">
+                                        <span class="h5">Тур {{ tour }}</span>
                                     </button>
                                 </p>
                             </div>
                         </div>
-                        <div class="collapse" id="tour{{ tour }}">
+                        <div class="collapse
+                                {% if tour >= league.actual_tour_num_1 and tour <= league.actual_tour_num_2 %}
+                                show
+                                {% endif %}
+                                {% if forloop.last %}mt-0 mb-3{% else %}mt-3{% endif %}" id="tour{{ tour }}">
 
                             {% for match in league|tour_matches_in_league:tour %}
                                 <div class="row">
