--- a/haxball_site/templates/tournament/teams/team_page.html
+++ b/haxball_site/templates/tournament/teams/team_page.html
@@ -224,7 +224,7 @@
                                                      style="cursor: pointer;">
                                             {% endif %}
                                             {% if team.owner.user_profile.telegram %}
-                                                <a href="https://t.me/{{ agent.player.user_profile.telegram }}"
+                                                <a href="https://t.me/{{ team.owner.user_profile.telegram }}"
                                                    target="_blank"><img
                                                         src="{% static "img/ico/tg_1.png" %}" height="30" width="30"
                                                         title="{{ team.owner.user_profile.telegram }}"></a>
